# randomos

./: Cargo.toml  LICENSE  README.md  pyproject.toml  randomos.pyi  requirements-dev.in  requirements-dev.txt
examples/: add_numbers.py  excp.py  ihaveaclass.py  read_file.py  useless.py
src/: lib.rs
