[package]
name = "randomos"
version = "0.2.0"
authors = ["Kushal Das <mail@kushaldas.in>"]
edition = "2021"
description = "Python module to learn"
documentation = "https://github.com/kushaldas/randomos/"
readme = "README.md"
homepage = "https://github.com/kushaldas/randomos"
repository = "https://github.com/kushaldas/randomos"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "randomos"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
sysinfo = "0.17.0"

[features]
default = ["pyo3/extension-module"]

