[package]
name = "randomos"
version = "0.1.0"
authors = ["Kushal Das <mail@kushaldas.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "randomos"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.14.5"

[features]
default = ["pyo3/extension-module"]
 

[package.metadata.maturin]
classifier = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
maintainer = "Kushal Das"
maintainer-email = "mail@kushaldas.in"
requires-python = ">=3.7"
[package.metadata.maturin.project-url]
Github = "https://github.com/kushaldas/randomos"
